src/objects/MetroclientCoverageGeography__c.object
<CustomObject>
    <description>Metrostudy Coverage - Geographies assigned to Metrostudy Coverage groups.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active geographies are currently available geographies</description>
        <inlineHelpText>Active geographies are currently available geographies</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <referenceTo>MetroclientCoverage__c</referenceTo>
        <relationshipName>MetroclientCoverageCounty</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geography</label>
        <referenceTo>MetroclientGeography__c</referenceTo>
        <relationshipName>MetroclientCoverageGeography</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Metrostudy Coverage Geography</label>
    <listViews>
        <fullName>CoreLogic</fullName>
        <columns>Coverage__c</columns>
        <columns>Geography__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coverage__c</field>
            <operation>contains</operation>
            <value>CoreLogic</value>
        </filters>
        <label>CoreLogic Deed Coverage</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MSACoverage</fullName>
        <columns>Coverage__c</columns>
        <columns>Geography__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coverage__c</field>
            <operation>contains</operation>
            <value>MSA</value>
        </filters>
        <label>MSA Coverage (381)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MarketSnapshot</fullName>
        <columns>Coverage__c</columns>
        <columns>Geography__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coverage__c</field>
            <operation>contains</operation>
            <value>Market Snapshot</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2015 12:00 AM</value>
        </filters>
        <label>Market Snapshot</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MetrostudySurvey</fullName>
        <columns>Coverage__c</columns>
        <columns>Geography__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coverage__c</field>
            <operation>contains</operation>
            <value>Survey</value>
        </filters>
        <label>Metrostudy Survey</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewHoem</fullName>
        <columns>Coverage__c</columns>
        <columns>Geography__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coverage__c</field>
            <operation>contains</operation>
            <value>Executive</value>
        </filters>
        <label>New Home Executive Summary</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Top100</fullName>
        <columns>Coverage__c</columns>
        <columns>Geography__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coverage__c</field>
            <operation>contains</operation>
            <value>Top 100</value>
        </filters>
        <label>Top 100</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Coverage Geographies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>